Вынес Set<String> set = new HashSet<>() и String[] words = text.split("\\P{IsAlphabetic}+") из методов